2007-06-03
  Username and password now set on twitter.Api, not individual method calls
  Added support for SetCredentials and ClearCredentials on twitter.Api
  Added support for optional since_id parameter on GetPublicTimeline
  Added support for optional since parameter on GetUserTimeline 
  Added support for optional since and user parameters on GetFriendsTimeline
  Added support for GetStatus ("statuses/show" in the twitter web api)
  Added support for GetReplies
  Added support for optional user parameter on GetFriends 
  Added support for GetUser ("users/show" in the twitter web api)
  Added support for GetFeatured
  Added support for GetDirectMessages
  
2007-04-27
  
  Modified examples/twitter-to-xhtml.py to handle unicode
  Dropped dependency on setuptools (too complicated/buggy)
  Added unicode test cases
  Fixed issue 2 "Rename needs an unlink in front"
  
2007-04-02

  Released 0.3.
  Use gmtime not localtime to calculate relative_created_at.

2007-03-26

  Released 0.2
  GetUserTimeline can accept userid or username.

2007-03-21

  Calculate relative_created_at on the fly

2007-01-28

  Released 0.1
  Initial checkin of python-twitter
