@@ -1,0 +1,1 @@
+{"sender_screen_name":"dewitt","created_at":"Tue Jun 05 05:53:22 +0000 2007","recipient_screen_name":"kesuke","recipient_id":718443,"text":"\u041c\u043e\u0451 \u0441\u0443\u0434\u043d\u043e \u043d\u0430 \u0432\u043e\u0437\u0434\u0443\u0448\u043d\u043e\u0439 \u043f\u043e\u0434\u0443\u0448\u043a\u0435 \u043f\u043e\u043b\u043d\u043e \u0443\u0433\u0440\u0435\u0439","id":3496202,"sender_id":673483}
